--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -25,13 +25,13 @@
   }
 
   &__left {
-    width: (100%/3);
+    width: 34.333333%;
     display: table-cell;
     
   }
 
   &__right {
-    width: (100%/3)*2;
+    width: 65.6666667;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
